--- a/src/app/infos/infos.page.scss
+++ b/src/app/infos/infos.page.scss
@@ -10,9 +10,16 @@ img {
 table {
     text-align: center;
     margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 th {
     padding-right: 5px;
     padding-left: 5px;
+}
+
+p {
+    text-align: justify;
+    margin: auto;
 }
