Translate the 'add-move' title

--- a/src/app/add-move/add-move.page.html
+++ b/src/app/add-move/add-move.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/timeline" text="Retour"></ion-back-button>
+      <ion-back-button defaultHref="/timeline" text="{{ 'general.back' | translate }}"></ion-back-button>
     </ion-buttons>
     <ion-title>Nouveau trajet</ion-title>
     <ion-buttons slot="end">
