--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -1,3 +1,16 @@
 p {
     padding: 15px;
 }
+
+.social-icons a {
+    text-decoration: none;
+    color: black;
+}
+.social-icons a:visited {
+    text-decoration: none;
+    color: black;
+}
+.social-icons a:hover {
+    text-decoration: none;
+    color: black;
+}
