--- a/src/app/infos/infos.page.html
+++ b/src/app/infos/infos.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button defaultHref="/" text="{{ 'general.back' | translate }}"></ion-back-button>
     </ion-buttons>
 
     <ion-title>En apprendre plus</ion-title>
